--- a/index.html
+++ b/index.html
@@ -31,160 +31,10 @@
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3215014361489762"
      crossorigin="anonymous"></script>
 
-  <style>
-    /* 🌈 TOOL CARD LIGHT STYLE */
-    .tool-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: 1.8rem;
-      margin: 2.5rem auto;
-      max-width: 1150px;
-      padding: 0 1rem;
-    }
 
-    .tool-card {
-      display: block;
-      background: linear-gradient(145deg, #f8fafc, #edf2f7);
-      border: 1px solid #e2e8f0;
-      border-radius: 1.2rem;
-      padding: 1.6rem 1.4rem;
-      text-decoration: none;
-      color: #1e293b;
-      transition: all 0.25s ease;
-      box-shadow: 0 3px 10px rgba(0, 0, 0, 0.05);
-    }
+  <link rel="stylesheet" href="../css/style.css" />
 
-    .tool-card:hover {
-      transform: translateY(-5px);
-      background: linear-gradient(145deg, #f1f5f9, #e2e8f0);
-      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
-    }
-
-    .tool-title {
-      font-weight: 700;
-      font-size: 1.2rem;
-      margin-bottom: 0.4rem;
-    }
-
-    .tool-desc {
-      font-size: 0.95rem;
-      color: #475569;
-      line-height: 1.5;
-    }
-
-    @media (max-width: 900px) {
-      .tool-grid {
-        grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-      }
-      .tool-card {
-        padding: 1.3rem;
-      }
-      .tool-title { font-size: 1.1rem; }
-      .tool-desc { font-size: 0.85rem; }
-    }
-
-    /* 💌 CONTACT + FOOTER STYLES */
-    .contact-section {
-      max-width: 720px;
-      margin: 3rem auto;
-      padding: 2rem;
-      background: rgba(15,23,42,0.85);
-      border-radius: 1.2rem;
-      box-shadow: 0 8px 24px rgba(0,0,0,0.25);
-      color: #f1f5f9;
-      font-family: system-ui, sans-serif;
-    }
-
-    .contact-section[dir="rtl"] { text-align: right; }
-
-    .contact-section h2 {
-      color: #a5b4fc;
-      text-align: center;
-      margin-bottom: 0.8rem;
-      font-size: 1.6rem;
-    }
-
-    .contact-section p {
-      text-align: center;
-      color: #cbd5e1;
-      margin-bottom: 1.8rem;
-      font-size: 0.95rem;
-    }
-
-    .contact-section form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-
-    .contact-section input,
-    .contact-section textarea {
-      width: 100%;
-      padding: 0.8rem 1rem;
-      border: 1px solid rgba(148,163,184,0.3);
-      border-radius: 0.75rem;
-      background: rgba(30,41,59,0.6);
-      color: #f8fafc;
-      font-size: 1rem;
-      outline: none;
-      transition: border-color 0.2s ease, box-shadow 0.2s ease;
-    }
-
-    .contact-section input:focus,
-    .contact-section textarea:focus {
-      border-color: #a5b4fc;
-      box-shadow: 0 0 8px rgba(165,180,252,0.3);
-    }
-
-    .contact-section textarea {
-      min-height: 130px;
-      resize: vertical;
-    }
-
-    .contact-section button {
-      background: linear-gradient(135deg, #38bdf8, #6366f1);
-      border: none;
-      color: #0f172a;
-      font-weight: 700;
-      padding: 0.9rem;
-      border-radius: 9999px;
-      cursor: pointer;
-      font-size: 1rem;
-      transition: transform 0.15s ease, box-shadow 0.2s ease;
-    }
-
-    .contact-section button:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 14px rgba(99,102,241,0.4);
-    }
-
-    /* FOOTER */
-    .site-footer {
-      background: linear-gradient(to right, rgba(15,23,42,0.95), rgba(30,41,59,0.95));
-      border-top: 1px solid rgba(148,163,184,0.2);
-      padding: 2rem 1rem;
-      margin-top: 3rem;
-      text-align: center;
-      color: #cbd5e1;
-      font-size: 0.95rem;
-    }
-
-    .site-footer a {
-      color: #a5b4fc;
-      text-decoration: none;
-      transition: color 0.25s ease, text-shadow 0.25s ease;
-    }
-
-    .site-footer a:hover {
-      color: #f0f9ff;
-      text-shadow: 0 0 6px rgba(165,180,252,0.6);
-    }
-
-    .site-footer strong {
-      color: #f9fafb;
-      font-weight: 600;
-    }
-  </style>
+  
 </head>
 
 <body>
